# pdf_translate_project

./: .gitignore  README.md
nllb/: locustfile.py  main.py  model.py  model_client.py  pyproject.toml
pdf_translate/: main.py  pyproject.toml  translated.docx  utils.py
